--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,5 @@ data/*/*
 !data/references/atcc_v4.fasta
 !data/raw/NC_1_18118-0070_S59_L001_R1_001.fastq
 !data/raw/NC_1_18118-0070_S59_L001_R2_001.fastq
-
-# Sequences taxonomy data
-!data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.nr_v138.wang.tax.summary
-# OTU/sample data
-!data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.pick.opti_mcc.shared
-# Rarefaction data
-!data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.pick.opti_mcc.groups.rarefaction
-# Sequencing error summary data
-!data/mothur/raw.trim.contigs.good.unique.good.filter.unique.precluster.pick.pick.pick.error.summary
-# Chloroplast sequences taxonomy data
-!data/mothur/chloroplast.pds.wang.tax.summary
+!data/raw/metadata_metagenomics.csv
+!data/raw/cog_categories_colors.tsv
